// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an empty entry properly 1`] = `
<div
  className="meal-item"
  onClick={[Function]}
>
  <div
    className="meal-item-name"
  />
  <div
    className="meal-item-values"
  >
    <TrackedNutrients />
  </div>
</div>
`;

exports[`should render the given food name 1`] = `
<div
  className="meal-item"
  onClick={[Function]}
>
  <div
    className="meal-item-name"
  >
    Cheesecake
  </div>
  <div
    className="meal-item-values"
  >
    <TrackedNutrients
      nutrients={
        Object {
          "energy": 100,
          "protein": 20,
          "totalCarbs": 15,
          "totalFats": 9,
        }
      }
    />
  </div>
</div>
`;
